[project]
name = "prom-cache"
version = "0.1.1"
description = "front end server for prom"
authors = [
    {name = "rippleFCL",email = "github@ripple.contact"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shatter-api (==0.1.1)",
    "requests (>=2.32.4,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
